# Ada-AST-builder

./: .gitignore  CMakeLists.txt  build.bat  example_script.ads  main.cpp  Грамматика.txt
include/adast/AST/: AST.hpp  ASTNode.hpp  ASTNodePublic.hpp
include/adast/factory/: LexerFactory.hpp  ParserFactory.hpp  SemanticFactory.hpp
include/adast/interface/: ASTNodeInterface.hpp  LexerInterface.hpp  NodeVisitorInterface.hpp  ParserInterface.hpp  SemanticAnalyzerInterface.hpp  VisitableNodeInterface.hpp
include/adast/lexer/: FileData.hpp  Lexer.hpp  LexerStates.hpp
include/adast/parser/: Parser.hpp
include/adast/semantic/: SemanticAnalyzer.hpp  SemanticNodeVisitor.hpp
include/adast/token/: Token.hpp
src/adast/: AST.cpp  ASTNode.cpp  FileData.cpp  Lexer.cpp  LexerFactory.cpp  LexerStates.cpp  Parser.cpp  ParserFactory.cpp  SemanticAnalyzer.cpp  SemanticAnalyzerFactory.cpp  SemanticNodeVisitor.cpp  Token.cpp
